fix: align the header

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,11 +1,19 @@
 .header {
   position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  min-height: 100px;
+  width: 100%;
   border-bottom: 1px solid #dbdce0;
   transition: background-color 0.6s, border-color 0.6s;
+
+  &__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1366px;
+    min-height: 100px;
+    padding: 0 98px;
+    margin: 0 auto;
+  }
 
   &--transparent {
     background: 0 0;
