--- a/src/styles/core/_common.scss
+++ b/src/styles/core/_common.scss
@@ -14,6 +14,8 @@
 }
 
 .main {
+  padding-top: 100px;
+
   &__item {
     margin-bottom: 140px;
   }
